Basic development setup

--- a/Development/php7.2-apache/Dockerfile
+++ b/Development/php7.2-apache/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.2-apache AS Builder
+FROM php:7.2-apache
 RUN apt-get -y update --fix-missing --no-install-recommends
 RUN apt-get -y upgrade
 
@@ -16,10 +16,7 @@ RUN apt-get -y clean all && apt-get -y update && apt-get -y dist-upgrade
 
 # 1. development packages
 RUN apt-get install -y  --fix-missing \
-    zip \
-    curl \
     sudo \
-    nano\
     unzip \
     libicu-dev \
     libbz2-dev \
@@ -34,18 +31,18 @@ RUN apt-get install -y  --fix-missing \
 RUN apt-get clean
 
 # 2. apache configs + document root
-#ENV APACHE_DOCUMENT_ROOT=/var/www/html/public
-#ARG APACHE_DOCUMENT_ROOT
-RUN sed -ri -e 's!/var/www/html!/var/www/html/public!g' /etc/apache2/sites-available/*.conf
-RUN sed -ri -e 's!/var/www/!/var/www/html/public!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
-
-# 3. mod_rewrite for URL rewrite and mod_headers for .htaccess extra headers like Access-Control-Allow-Origin-
-RUN a2enmod rewrite headers
+ENV APACHE_DOCUMENT_ROOT=/var/www/html/public
+RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf
+RUN sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
 
 RUN apt-get -y install libsqlite3-dev libsqlite3-0 default-mysql-client
 RUN docker-php-ext-install pdo_mysql
 RUN docker-php-ext-install pdo_sqlite
 RUN docker-php-ext-install mysqli
+
+#Enable PDO extenstion from php.ini, we areleady in development mode
+RUN cp /usr/local/etc/php/php.ini-development /usr/local/etc/php/php.ini
+RUN sed -i 's/;extension=pdo_mysql/extension=pdo_mysql/g' /usr/local/etc/php/php.ini
 
 RUN docker-php-ext-install tokenizer
 RUN docker-php-ext-install json
@@ -77,21 +74,13 @@ RUN docker-php-ext-install \
     opcache \
     calendar
 
-# 7. we need a user with the same UID/GID with host user
-# so when we execute CLI commands, all the host file's ownership remains intact
-# otherwise command from inside container will create root-owned files and directories
-#ARG UID
+# Install Composer
+COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
+# show that both Composer and PHP run as expected
+RUN composer --version && php -v
+
+WORKDIR /var/www/html
+
 RUN useradd -G www-data,root -u 1000 -d /home/devuser devuser
-
-
-# 8. private keys
-#ARG SSH_KEY
-#ARG SSH_KEY_PASSPHRASE
-#RUN mkdir -p /root/.ssh && \
-#    chmod 0700 /root/.ssh && \
-#    ssh-keyscan github.com > /root/.ssh/known_hosts && \
-#    echo "${SSH_KEY}" > /root/.ssh/id_rsa && \
-#    chmod 600 /root/.ssh/id_rsa
-
 
 WORKDIR /var/www/html/
