--- a/.github/workflows/php7.4-apache-development.yml
+++ b/.github/workflows/php7.4-apache-development.yml
@@ -27,7 +27,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: 'Development/php7.4-apache'
+          context: 'Development/php7.4-apache/'
           file: ./Dockerfile 
           push: true
           tags: egahmad/php7.4-apache-development.yml:latest
