--- a/.github/workflows/php7.4-apache-development.yml
+++ b/.github/workflows/php7.4-apache-development.yml
@@ -20,14 +20,14 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
-          username: egahmad
-          password: 7682894b-eb7e-4fb6-a951-2ec2803346d8
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          #context: './Development/php7.4-apache/'
+          #context: 'Development/php7.4-apache'
           file: ./Development/php7.4-apache/Dockerfile
           push: true
           tags: egahmad/php7.4-apache-development.yml:latest
