--- a/Development/php7.4-apache/Dockerfile
+++ b/Development/php7.4-apache/Dockerfile
@@ -68,4 +68,7 @@ RUN apt-get update \
 # Install xdebug
 RUN pecl install xdebug && docker-php-ext-enable xdebug
 
+# Install Composer
+COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
+
 RUN apt-get clean
